2022-11-12

    * skirmishes/Agean Archipelago:add new map by Yavin
    * Some random maps now have ice instead of water if Arctic biome is selected
      * Corinthian Isthmus II
      * Yekaterinaville
      * Homer's Delight
      * Jammy's Despair
    * release v0.26.5

2022-11-09

    * scenarios/troy:add new map by @perfecto25

2022-10-27

    * remove Civ presets from six skirmish maps

2022-10-25

    * skirmishes/{a_path_beyond_ii_8p , x_8p}: add new maps by @Grapjas93

2022-10-24

    * random/carpathian.js:replace with newer version

2022-10-17

    * random/jammys_despair.js: paint impassable areas more accurately
    (change SlopeConstraint)

2022-09-28

    * release v0.26.4

2022-09-27

    * remove maps that are already included in the feldmap mod
    (see https://wildfiregames.com/forum/topic/53880-feldmap-a26/)

2022-09-04

    * maps/scenarios/Caledonia_2p: add new map by perfecto25
    * maps/scenarios/Masada: add new map by perfecto25

2022-08-08

    * release v0.26.3

2022-08-05

    * maps/random/death_canyon.js:add new map
    * maps/random/mainland_tg_disabled_traders.json:add version of
    Mainland in which traders and merchant ships are disabled


2022-07-22

    * maps/skirmishes/The_valley_of_forgotten_temple (4).xml:add new
    map by Lion.Kanzen

2022-07-18

    * maps/random/jammys_despair.json:disable docks

2022-07-11

    * release v0.26.2

2022-07-10

    * maps/random/plague_swamp.js:remove triggers, remove insects
    * The wonder on Fert maps are now capturable by mobile units

2022-07-09

    * random/dune.json:change biome from 'desert' to 'sahara' (fixes OOS)
    * maps/random/fert_triggers.js:fix 'GetCiv' error message

2022-07-07

    * release v0.26.1

2022-07-06

    * maps/random/homers_delight.js:don't have fish on land
    * mod.json:remove trailing '-git' from mod name

2022-07-04

    * release v0.26.0

2022-07-03

    * Add random/homers_delight.js

2022-06-18
