@@ -2,8 +2,9 @@
 	"settings" : {
 		"Name" : "Northern Lights II",
 		"Script" : "northern_lights_ii.js",
-		"Description" : "Players start in a tough map to play with scarce wood and dangerous polar animals.",
+		"Description" : "Like Northern Lights, but with more wood and starting food.",
 		"Preview" : "northern_lights.png",
+		"Keywords" : "community",
 		"CircularMap" : true
 	}
 }
