@@ -1,3 +1,7 @@
+2022-11-24
+
+    * random/northern_lights_ii.js:add modified map with more wood and starting food
+
 2022-11-12
 
     * skirmishes/Agean Archipelago:add new map by Yavin
